--- a/project/MyEngine1.vcxproj
+++ b/project/MyEngine1.vcxproj
@@ -319,9 +319,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Character\BaseCharacter.cpp" />
-    <ClCompile Include="Application\GameObject\Board.cpp" />
     <ClCompile Include="Application\GameObject\Bullet.cpp" />
-    <ClCompile Include="Application\GameObject\flooar.cpp" />
+    <ClCompile Include="Application\GameObject\Floor.cpp" />
     <ClCompile Include="Application\Camera\FollowCamera.cpp" />
     <ClCompile Include="Application\GameObject\GameObject.cpp" />
     <ClCompile Include="Application\Ground.cpp" />
@@ -404,9 +403,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Character\BaseCharacter.h" />
-    <ClInclude Include="Application\GameObject\Board.h" />
     <ClInclude Include="Application\GameObject\Bullet.h" />
-    <ClInclude Include="Application\GameObject\flooar.h" />
+    <ClInclude Include="Application\GameObject\Floor.h" />
     <ClInclude Include="Application\Camera\FollowCamera.h" />
     <ClInclude Include="Application\GameObject\GameObject.h" />
     <ClInclude Include="Application\Ground.h" />
