--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -13,9 +13,10 @@ job:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        - name: Add MSBuild to PATH
-          uses: microsoft/setup-msbuild@v2
-          with: msbuild-architecture: x64
-        - name: Build
-          run: |
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v2
+        with: 
+          msbuild-architecture: x64
+      - name: Build
+          run:|
             msbuild ${{env.SOLUTION_FILE_PATH}} /p:Platform-x64,Configuration=${{env.CONFIGURATION}}
