--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -7,9 +7,10 @@ on:
 env:
   SOLUTION_FILE_PATH: project/MyEngine1.sln
   CONFIGURATION: Debug
-job:
+jobs:
   build:
     runs-on: windows-2022
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
