--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -19,4 +19,5 @@ jobs:
         with: 
           msbuild-architecture: x64
       - name: Build
-        run: msbuild ${{env.SOLUTION_FILE_PATH}} /p:Platform-x64,Configuration=${{env.CONFIGURATION}}
+        run: |
+          msbuild ${{env.SOLUTION_FILE_PATH}} /p:Platform-x64,Configuration=${{env.CONFIGURATION}}
