--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   SOLUTION_FILE_PATH: project/MyEngine1.sln
-  CONFIGURATION: Debug
+  CONFIGURATION: Release
 jobs:
   build:
     runs-on: windows-2022
